<resources>
    <string name="app_name">"esenglish"</string>
    <string name="et_account">鹰硕账号/手机号</string>
    <string name="et_passwod">密码</string>
    <string name="tv_login">登录</string>
    <string name="tv_forget_password">忘记密码?</string>
    <string name="tv_register">注册</string>
    <string name="login_error_param">调用接口参数有误</string>
    <string name="login_error_account_or_password">账号或密码错误</string>
    <string name="login_error_account_type">账号类型错误，只能登录学生账号</string>
    <string name="login_error_data_exception">数据异常，禁止登录</string>
    <string name="login_error_net">网络错误</string>
    <string name="et_reg_account">手机号</string>
    <string name="et_reg_password">密码</string>
    <string name="tv_reg_register">注册</string>
    <string name="et_reg_code">验证码</string>
    <string name="btn_reg_getcode">获取验证码</string>
    <string name="tv_reg_accept">已阅读并同意</string>
    <string name="tv_reg_accept1">《鹰硕注册协议》</string>
    <string name="tv_get_captcha">获取验证码</string>
    <string name="tv_reset_pass">忘记密码</string>
    <string name="et_phone">手机号</string>
    <string name="et_set_password">设置新密码</string>
    <string name="et_captcha">验证码</string>
    <string name="tv_finish">完成</string>
    <string name="weibosdk_demo_share_to_weibo_title">从本应用->微博->本应用</string>
    <string name="weibosdk_demo_share_to_weibo_title_all_in_one">分享微博ALL IN ONE</string>
    <string name="weibosdk_demo_share_from_weibo_title">从微博->本应用->微博</string>
    <string name="weibosdk_demo_share_default_text">欢迎使用新浪微博 SDK</string>
    <string name="weibosdk_demo_share_to">分  享</string>
    <string name="weibosdk_demo_share_text_title">分享文字</string>
    <string name="weibosdk_demo_share_image_title">分享图片</string>
    <string name="weibosdk_demo_share_webpage_title">分享网页</string>
    <string name="weibosdk_demo_share_music_title">分享音乐</string>
    <string name="weibosdk_demo_share_video_title">分享视频</string>
    <string name="weibosdk_demo_share_voice_title">分享声音</string>
    <string name="weibosdk_demo_share_webpage_desc">网页描述：XXX</string>
    <string name="weibosdk_demo_share_music_desc">音乐描述：XXX</string>
    <string name="weibosdk_demo_share_video_desc">视频描述：XXX</string>
    <string name="weibosdk_demo_share_voice_desc">声音描述：XXX</string>
    <string name="weibosdk_demo_app_url">https://github.com/mobileresearch/weibo_android_sdk/blob/master/WeiboSDKDemo.apk</string>
    <string name="weibosdk_demo_test_webpage_url">http://news.sina.com.cn/c/2013-10-22/021928494669.shtml</string>
    <string name="weibosdk_demo_test_music_url">http://music.sina.com.cn/yueku/i/2850305.html</string>
    <string name="weibosdk_demo_test_video_url">http://video.sina.com.cn/p/sports/cba/v/2013-10-22/144463050817.html</string>
    <string name="weibosdk_demo_test_voice_url">http://music.sina.com.cn/yueku/i/2850305.html</string>
    <string name="weibosdk_demo_is_support_sdk">当前微博客户端是否支持 SDK</string>
    <string name="weibosdk_demo_register_app_to_weibo">注册应用到微博</string>
    <string name="weibosdk_demo_share_to_weibo">分享到微博（仅客户端）</string>
    <string name="weibosdk_demo_share_to_weibo_all_in_one">分享到微博（ALL IN ONE）</string>
    <string name="weibosdk_demo_register_app_to_weibo_hint"><li>如何查看是否注册成功？打开微博客户端->点击发搏器->点击右下角的＋号->点击添加应用，看看能否看到该 DEMO 应用。</li>\n<li>当您的应用成功的注册到微博后，您可以通过从微博客户端唤起您的应用，实现分享（即微博附件栏集成分享）。</li>\n<li>该附件栏集成分享权限需要合作申请。<b>详情请见：</b><a href="http://open.weibo.com/wiki/%E7%A7%BB%E5%8A%A8%E5%AE%A2%E6%88%B7%E7%AB%AF%E6%8E%A5%E5%85%A5">2、微博原生分享 --> b) 集成分享</a></li>\n<b>请注意：</b>目前该 DEMO 应用已申请过权限，默认情况下，第三方应用没有对应权限。</string>
    <string name="weibosdk_demo_obtain_client_abstract_info_hint">当前微博客户端信息如下：</string>
    <string name="weibosdk_demo_is_installed_weibo">1. 是否安装了微博客户端？</string>
    <string name="weibosdk_demo_support_api_level">2. 当前微博客户端支持的 SDK 版本号：</string>
    <string name="weibosdk_demo_support_api_level_hint"><b>请注意：</b>\n<li>目前第三方分享微博需要客户端的支持，请确保已安装微博客户端。如果不想使用微博客户端进行分享，请参照：<a href="http://open.weibo.com/wiki/2/statuses/upload">OpenAPI</a></li>\n<li>SupportApi >= 10351时，微博客户端支持同时分享多条数据，即同时可以分享文本、图片以及其它媒体资源（网页、音乐、视频、声音）中的一种；</li>\n<li>SupportApi &lt; 10351，微博客户端只支持分享单条数据，即只能分享文本、图片、网页、音乐、视频中的一种，不支持声音（Voice）消息；</li>\n<li>SupportApi = -1，微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</li></string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weibosdk_demo_has_installed_weibo">\t已安装</string>
    <string name="weibosdk_demo_has_not_installed_weibo">\t未安装</string>
    <string name="weibosdk_demo_cancel_download_weibo">\t取消下载</string>
    <string name="weibosdk_demo_toast_register_app_to_weibo">已注册，请打开微博客户端查看是否注册成功。</string>
    <string name="weibosdk_demo_share_text_template">我正在使用微博客户端发博器分享文字</string>
    <string name="weibosdk_demo_share_webpage_template">【%1$s】（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_music_template">我正在听 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_video_template">我正在看 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_voice_template">我分享了 %1$s（分享自 WeiboSDKDemo %2$s）</string>
    <string name="weibosdk_demo_share_webpage_demo">XXX 新闻</string>
    <string name="weibosdk_demo_share_music_demo">XXX 音乐</string>
    <string name="weibosdk_demo_share_video_demo">XXX 视频</string>
    <string name="weibosdk_demo_share_voice_demo">XXX 声音</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
    <string name="pk_activity_toolbar_title">收到客户端请求消息失败</string>
    <string name="main_every_day_back_words">天天背词</string>
    <string name="main_tv_book">七年级上册</string>
    <string name="main_tv_practice">选词练习</string>
    <string name="main_tv_plan">改计划</string>
    <string name="main_tv_todaybackword">今日背词</string>
    <string name="main_thiscomple">今日背词</string>
    <string name="main_tv_residue">剩余</string>
    <string name="main_tv_day">天</string>
    <string name="main_tv_remainday">313</string>
    <string name="main_tv_tv_todayword">100</string>
    <string name="main_slash">/</string>
    <string name="main_tv_undone">520</string>
    <string name="main_tv_complete">520</string>
    <string name="load_word_data">没有选择课本,请从计划中选择课本</string>
    <string name="update_load_word_data">课本更新，是否更新课本</string>
    <string name="lesson_id">{\"lesson_id\":%1$d}</string>
    <string name="input_activity_edit_hint">请输入要搜索的英文词汇</string>
    <string name="detail_activity_wordsignal">单词示意</string>
    <string name="detail_activity_wordsignal_test">n.
食糖;  一匙糖;  宝贝儿，亲爱的
vt.
在…加糖;  给…裹上（糖衣或类糖物）
vi.
形成糖
int.
（做了蠢事或出现差错时表示懊恼，用作 shit 的委婉语）哎呀，真是的</string>
    <string name="detail_activity_example">双语例句</string>
    <string name="detail_activity_example_list_test1">1、Ice cream is high in fat and sugar.</string>
    <string name="detail_activity_example_list_test11">冰激凌富含脂肪和糖。</string>
    <string name="detail_activity_example_list_test2">2、How many sugars do you take?.</string>
    <string name="detail_activity_example_list_test22">你加几勺糖？</string>
    <string name="cancel">取消</string>
    <string name="study_activity_pronunciation">我的发音</string>
    <string name="study_activity_text_record">重新录音</string>
    <string name="study_activity_text_mark">打分</string>
    <string name="study_check">按住检查</string>
    <string name="study_agin_read">再读一次</string>
    <string name="study_next_word">下一个</string>
    <string name="study_failing_grade">真可惜~再读一次吧!</string>
    <string name="study_good_grade">厉害!你的发音可以自由沟通啦~</string>
    <string name="study_verygood_grade">真棒!你的发音可以媲美老师啦~</string>
    <string name="study_sentence">"%1$d、%2$s \\\\gif"</string>
    <string name="study_static_sentence">"%1$d、%2$s \\\\png"</string>
    <string name="study_word_finish">"该份单词学习完毕"</string>
    <string name="english_gif_sentence">"%1$s \\\\gif"</string>
    <string name="english_static_sentence">"%1$s \\\\png"</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="pk_tab">PK场</string>
    <string name="pk_tab_grade">今日战绩</string>
    <string name="pk_tab_ranking">排行榜</string>
    <string name="pk_name">李易峰</string>
    <string name="pk_book">七年级上册</string>
    <string name="pk_word">词汇：</string>
    <string name="pk_number">300</string>
    <string name="pk_text">进入PK场</string>
    <string name="pk_win_loss">22</string>
    <string name="pk_current_ranking">你当前排名：第%1$d名</string>
    <string name="analysis_title">我的分析</string>
    <string name="matchsuccess">匹配成功</string>
    <string name="readytofight">准备战斗</string>
    <string name="analysis_today_study_title">"今日已学单词"</string>
    <string name="analysis_all_study_title">"全部已学单词"</string>
    <string name="analysis_history_error_title">"历史错词"</string>
    <string name="analysis_number">"个"</string>
    <string name="login">"注册"</string>
    <string name="edit">"编辑"</string>
    <string name="histoy_number">"错%1$d个"</string>
    <string name="search">"口语秀"</string>
    <string name="histoy_text">"n.鳗鱼;鳝鱼;小线虫;精明油滑的人"</string>
    <string name="see">"查看"</string>
    <string name="delte">"删除"</string>
    <string name="again_study">"重新学习"</string>
    <string name="ok_button">"确认"</string>
    <string name="letgo">"LET'GO"</string>
    <string name="game">"选词游戏"</string>
    <string name="ok_dialog">"确认删除选中的%1$d个单词？"</string>
    <string name="ocabularylist">"词汇表"</string>
    <string name="mark">"%1$d分"</string>
    <string name="marking">"打分中"</string>
    <string name="errorstatistics">"错误统计:"</string>
    <string name="correctstatistics">"正确统计:"</string>
    <string name="current_tatol">"%1$d /"</string>
    <string name="wordgames">"选词游戏"</string>
    <string name="onemorecouncil">"再来一局"</string>
    <string name="senior_high">"中考词汇"</string>
    <string name="change_word">"换词汇"</string>
    <string name="grade">"%1$s:"</string>
    <string name="vocabulary_number">"%1$s:"</string>
    <string name="planned_completion">"计划完成时间:"</string>
    <string name="planned_completion_time">"2016年9月3日"</string>
    <string name="completion_date">"完成天数"</string>
    <string name="today_learn_word">"每天背单词"</string>
    <string name="my_plan">我的计划</string>
    <string name="plan_day">%1$d天</string>
    <string name="plan_word">%1$d个单词</string>
    <string name="surplus_word">剩余%1$d个单词</string>
    <string name="plan_time">2016年9月3日</string>
    <string name="book_is_load">本书已经下载</string>
    <string name="select_word">"请选择单词！"</string>
    <string name="my_profile_modify_save">保存</string>
    <string name="my_profile_men">男</string>
    <string name="my_profile_women">女</string>
    <string name="modify">修改词汇</string>
    <string name="human_education_edition">人教版初级英语七年级上册</string>
    <string name="english_in_primary_school">小学英语 (5)</string>
    <string name="junior_middle_school_english">初中英语 (5)</string>
    <string name="senior_high_school_entrance_examination">中考词汇 (5)</string>
    <string name="english_in_senior_high_school">高中英语 (5)</string>
    <string name="college_entrance_examination_vocabulary">高考词汇 (5)</string>
    <string name="college_english">大学英语教科书类 (5)</string>
    <string name="cet">大学英语四六级 (5)</string>
    <string name="modify_grade_books">"%2$s(%1$d)"</string>
    <string name="word_number">%1$d/%1$d</string>
    <string name="change_plan_title">是否更改计划？</string>
    <string name="my_message_empty">清空</string>
    <string name="about_me">关于我的</string>
    <string name="show_test1">someTimes your some times someTimes your some times someTimes your some times</string>
    <string name="show_test2">人一辈子有时候就靠疯狂一次</string>
</resources>