<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_layout_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tobr_activity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:background="?attr/colorPrimary"
        android:elevation="1.5dp"
        android:minHeight="@dimen/tool_bar_height"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/MyToolbarTheme">

        <LinearLayout
            android:id="@+id/ll_main_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.ssdy.mainpercenttest.widget.CircleImageView
                android:id="@+id/civ_main_user_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:src="@drawable/bt_pk"
                app:civ_border_color="@color/yellow_light"
                app:civ_border_width="2dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/main_every_day_back_words"
            android:textColor="@color/black_dark"
            android:textSize="@dimen/tool_bar_title_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--年级-->
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/pc_rl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_line"
            android:orientation="vertical"
            app:layout_heightPercent="46%"
            app:layout_marginLeftPercent="3.88%"
            app:layout_marginRightPercent="3.88%"
            app:layout_marginTopPercent="3.5%"
            app:layout_widthPercent="100%">

            <LinearLayout
                android:id="@+id/pc_ll1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                app:layout_heightPercent="18%"
                app:layout_widthPercent="100%">

                <TextView
                    android:id="@+id/tv_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_tv_book"
                    android:textColor="@color/black_gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/pc_rl1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@+id/pc_ll1"
                app:layout_heightPercent="47%"
                app:layout_marginTopPercent="3.2%"
                app:layout_widthPercent="100%">

                <android.support.percent.PercentRelativeLayout
                    android:id="@+id/pc_rl2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_heightPercent="100%"
                    app:layout_widthPercent="50%">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tv_residue"
                        android:textColor="@color/black_gray_dark"
                        android:textSize="13sp"
                        app:layout_marginLeftPercent="33%" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_marginLeftPercent="20%"
                        app:layout_marginTopPercent="28%">

                        <TextView
                            android:id="@+id/tv_remainday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_tv_remainday"
                            android:textColor="@color/black_gray"
                            android:textSize="40sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="4dp"
                            android:text="@string/main_tv_day"
                            android:textColor="@color/black_gray"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_practice"
                        android:layout_width="90dp"
                        android:layout_height="28dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/bg_rectangle"
                        android:gravity="center"
                        android:text="@string/main_tv_practice"
                        android:textColor="#f9b500"
                        android:textSize="13sp"
                        app:layout_marginLeftPercent="16%" />
                </android.support.percent.PercentRelativeLayout>

                <android.support.percent.PercentRelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentRight="true"
                    app:layout_heightPercent="100%"
                    app:layout_widthPercent="50%">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/main_tv_todaybackword"
                        android:textColor="@color/black_gray_dark"
                        android:textSize="13sp"
                        app:layout_marginRightPercent="33%" />

                    <TextView
                        android:id="@+id/tv_tadayword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/main_tv_tv_todayword"
                        android:textColor="#fde6a9"
                        android:textSize="40sp"
                        app:layout_marginRightPercent="28%"
                        app:layout_marginTopPercent="28%" />

                    <TextView
                        android:id="@+id/tv_plan"
                        android:layout_width="90dp"
                        android:layout_height="28dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/bg_rectangle"
                        android:gravity="center"
                        android:text="@string/main_tv_plan"
                        android:textColor="#f9b500"
                        android:textSize="13sp"
                        app:layout_marginRightPercent="20%" />
                </android.support.percent.PercentRelativeLayout>
            </android.support.percent.PercentRelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/pc_rl1"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_thiscomple"
                        android:textColor="@color/black_gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_undone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/main_tv_undone"
                        android:textColor="#31aaff"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_slash"
                        android:textColor="#31aaff"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_comple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_tv_complete"
                        android:textColor="@color/black_gray"
                        android:textSize="16sp" />
                </LinearLayout>

                <com.ssdy.mainpercenttest.widget.ProgressView
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="9dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </android.support.percent.PercentRelativeLayout>


        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/pc_rl"
            android:id="@+id/pc_rl3"
            app:layout_marginTopPercent="3%"
            app:layout_marginLeftPercent="4.2%"
            app:layout_marginRightPercent="4.2%"
            android:orientation="horizontal"
            app:layout_heightPercent="28%">

            <Button
                android:id="@+id/ibtn_study"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_aspectRatio="100%"
                app:layout_heightPercent="100%"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bt_study2"
                android:scaleType="centerInside" />

            <ListView
                android:id="@+id/ibtn_analysis"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_aspectRatio="100%"
                app:layout_heightPercent="100%"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical" />
        </android.support.percent.PercentRelativeLayout>

        <com.ssdy.mainpercenttest.widget.MainImageView
            android:id="@+id/ibtn_pk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_marginTopPercent="2.2%"
            app:layout_marginLeftPercent="4.2%"
            app:layout_marginRightPercent="4.2%"
            app:layout_widthPercent="100%"
            android:layout_below="@+id/pc_rl3"
            android:scaleType="centerInside"
            android:src="@drawable/bt_pk3"/>
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>
